fixed cover photos on mobile

--- a/src/components/Tracks/Track.module.css
+++ b/src/components/Tracks/Track.module.css
@@ -9,7 +9,7 @@
 }
 
 .cover {
-  height: 100%;
+  height: 70px;
   width: 70px;
   display: block;
 }
@@ -20,6 +20,7 @@
 
 @media only screen and (max-width: 600px) {
   .cover {
+    height: 50px;
     width: 50px;
   }
 
